--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
     "connect-ensure-login": "0.1.x",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^1.1.1",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
+    "express-messages": "^1.0.1",
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
     "mongoose": "^4.4.13",
