--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^1.1.1",
     "cookie-parser": "^1.4.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-messages": "^1.0.1",
     "express-session": "^1.13.0",
